--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="}Jorge Arturo Aguilar Solís">
                 <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/artrune" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/arturo-aguilar-62b54919b/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -203,10 +203,10 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="Víctor Manuel Lavalle Cantón">
                 <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/VictorLavalle" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/victorlavalle/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -219,9 +219,9 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="Eberth Francisco Mezeta Xool">
                 <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/orgs/The-WebOnes/people/EberthMezeta" target="_blank"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -235,10 +235,10 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="Pedro Daniel Euan Chan">
                 <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/dongato99" target="_blank" ><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/pedro-daniel-euan-chan-509242213/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -269,7 +269,7 @@
               Facultad de Matemáticas<br>
               Mérida, Yucatán <br>
               México <br><br>
-              <strong>Sitio Web:</strong> <a href="https://www.matematicas.uady.mx"> www.matematicas.uady.mx </a><br>
+              <strong>Sitio Web:</strong> <a href="https://www.matematicas.uady.mx" target="_blank"> www.matematicas.uady.mx </a><br>
             </p>
           </div>
 
@@ -303,11 +303,11 @@
           &copy; Copyright <strong><span>The WebOnes</span></strong>. Todos los derechos reservados
         </div>
         <div class="credits">
-          Hecho con ❤️ por <a href="https://bootstrapmade.com/">The WebOnes</a>
+          Hecho con ❤️ por <a href="https://github.com/The-WebOnes" target="_blank">The WebOnes</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/The-WebOnes" target="_blank" class="github" id="github-footer"><i class="bx bxl-github" id="git-footer"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
