Blog pages added, everything redy to replace

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Network and Computer Security | Final Project</title>
+  <title>Proyecto Final | Redes y Seguridad de Computadoras</title>
   <meta content="This Website is for our final project on the subject 'Network and computer security' "
     name="description">
   <meta content="Network, Webste, Security, IP, TCP, Sockets, HTTPS, HTTP, Internet of things, SSL " name="keywords">
@@ -47,10 +47,10 @@
           <li><a class="nav-link scrollto" href="#team">Conócenos</a></li>
           <li class="dropdown"><a href="#"><span>Temas de Interés</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">» Programación de Aplicaciones con Sockets</a></li>
-              <li><a href="#">» Seguridad en la Comunicación de Datos en una Red...</a></li>
-              <li><a href="#">» Seguridad en la Web</a></li>
-              <li><a href="#">» Internet de las cosas</a></li>
+              <li><a href="ProgramaciónDeAppsConSockets.html">» Programación de Aplicaciones con Sockets</a></li>
+              <li><a href="SeguridadEnLaComunicaciónDeDatos.html">» Seguridad en la Comunicación de Datos en una Red...</a></li>
+              <li><a href="SeguridadEnLaWeb.html">» Seguridad en la Web</a></li>
+              <li><a href="InternetDeLasCosas.html">» Internet de las cosas</a></li>
             </ul>
           </li>
         </ul>
@@ -74,32 +74,36 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="">Programación de Aplicaciones con Sockets</a></h4>
+            <h4 class="title"><a href="ProgramaciónDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <a href="ProgramaciónDeAppsConSockets.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-lock-2-fill"></i></div>
-            <h4 class="title"><a href="">Seguridad en la Comunicación de Datos en una Red</a></h4>
+            <h4 class="title"><a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la Comunicación de Datos en una Red</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <a href="SeguridadEnLaComunicaciónDeDatos.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
-            <div class="icon"><i class="ri-command-line"></i></div>
-            <h4 class="title"><a href="">Seguridad en la Web</a></h4>
+            <div class="icon"><i class="ri-git-repository-private-fill"></i></div>
+            <h4 class="title"><a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <a href="SeguridadEnLaWeb.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
-            <div class="icon"><i class="ri-fingerprint-line"></i></div>
-            <h4 class="title"><a href="">Internet de las Cosas</a></h4>
+            <div class="icon"><i class="ri-global-fill"></i></div>
+            <h4 class="title"><a href="InternetDeLasCosas.html">Internet de las Cosas</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <a href="InternetDeLasCosas.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
           </div>
         </div>
 
@@ -114,8 +118,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About Us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. </p>
+          <h2>Acerca del proyecto</h2>
+          <p>Redes y Seguridad de Computadoras | Agosto - Diciembre 2021 | M.C Martín Leonel Chí Pérez   </p>
         </div>
 
         <div class="row content">
@@ -125,11 +129,6 @@
               dolore
               magna aliqua.
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
@@ -138,16 +137,14 @@
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <a href="#hero" class="btn-learn-more">Ir al  Contenido</a>
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
 
-
-   
-    <!-- ======= Clients Section ======= -->
+    <!-- ======= Logos Section ======= -->
     <section id="logos" class="logos section-bg">
       <div class="container">
 
@@ -158,7 +155,7 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
-            <img src="assets/img/logo.png" class="img-fluid" alt="">
+            <img src="assets/img/logo.png" class="img-fluid" alt="The WebOnes Team Logo">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
@@ -168,7 +165,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section><!-- End Logos Section -->
 
 
     <!-- ======= Team Section ======= -->
@@ -276,19 +273,19 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Enlaces Útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Acerca De</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Conócenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">Acerca De</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#team">Conócenos</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Contenido</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Programación de Aplicaciones con Sockets</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Seguridad en la Comunicación de Datos en una Red</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Seguridad en la Web</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Internet de las Cosas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="ProgramaciónDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la Comunicación de Datos en una Red</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="InternetDeLasCosas.html">Internet de las Cosas</a></li>
             </ul>
           </div>
 
