2 videos added, 2 videos left

--- a/ProgramaciónDeAppsConSockets.html
+++ b/ProgramaciónDeAppsConSockets.html
@@ -49,8 +49,10 @@
                     <li class="dropdown"><a href="#"><span>Temas de Interés</span> <i
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="ProgramaciónDeAppsConSockets.html">» Programación de Aplicaciones con Sockets</a></li>
-                            <li><a href="SeguridadEnLaComunicaciónDeDatos.html">» Seguridad en la Comunicación de Datos en una Red...</a></li>
+                            <li><a href="ProgramaciónDeAppsConSockets.html">» Programación de Aplicaciones con
+                                    Sockets</a></li>
+                            <li><a href="SeguridadEnLaComunicaciónDeDatos.html">» Seguridad en la Comunicación de Datos
+                                    en una Red...</a></li>
                             <li><a href="SeguridadEnLaWeb.html">» Seguridad en la Web</a></li>
                             <li><a href="InternetDeLasCosas.html">» Internet de las cosas</a></li>
                         </ul>
@@ -151,9 +153,9 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
-                        <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
-                        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"
-                            data-vbtype="video" data-autoplay="true"></a>
+                        <video width="620" height="420" controls poster="assets/img/videoposter/poster-1.jpg">
+                            <source src="assets/video/sockets.mp4" type="video/mp4">
+                        </video>
                     </div>
 
                     <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
@@ -221,10 +223,16 @@
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Contenido</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="ProgramaciónDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la Comunicación de Datos en una Red</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="InternetDeLasCosas.html">Internet de las Cosas</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="ProgramaciónDeAppsConSockets.html">Programación de Aplicaciones con
+                                    Sockets</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la Comunicación de Datos
+                                    en una Red</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaWeb.html">Seguridad en la
+                                    Web</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="InternetDeLasCosas.html">Internet de las
+                                    Cosas</a></li>
                         </ul>
                     </div>
 
