--- a/InternetDeLasCosas.html
+++ b/InternetDeLasCosas.html
@@ -151,9 +151,9 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
-                        <img src="assets/img/about-video.jpg" class="img-fluid" alt="">
-                        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"
-                            data-vbtype="video" data-autoplay="true"></a>
+                        <video width="620" height="420" controls poster="assets/img/videoposter/poster-2.jpg">
+                            <source src="assets/video/internetcosas.mp4" type="video/mp4">
+                        </video>
                     </div>
 
                     <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
