Made the videos responsive

--- a/InternetDeLasCosas.html
+++ b/InternetDeLasCosas.html
@@ -151,7 +151,7 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
-                        <video width="620" height="420" controls poster="assets/img/videoposter/poster-2.jpg">
+                        <video controls poster="assets/img/videoposter/poster-2.jpg">
                             <source src="assets/video/internetcosas.mp4" type="video/mp4">
                         </video>
                     </div>
