--- a/ProgramaciónDeAppsConSockets.html
+++ b/ProgramaciónDeAppsConSockets.html
@@ -153,7 +153,7 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
-                        <video width="620" height="420" controls poster="assets/img/videoposter/poster-1.jpg">
+                        <video controls poster="assets/img/videoposter/poster-1.jpg">
                             <source src="assets/video/sockets.mp4" type="video/mp4">
                         </video>
                     </div>
