Littles fixed on text format

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <div class="section-title">
           <h2>Acerca del proyecto</h2>
-          <p>Redes y Seguridad de Computadoras | Agosto - Diciembre 2021 | M.C Martín Leonel Chí Pérez   </p>
+          <p>Redes y Seguridad de Computadoras | Agosto - Diciembre 2021 | M.C. Martín Leonel Chí Pérez   </p>
         </div>
 
         <div class="row content">
