Added the new structure for 12 pages of content... SMH

--- a/index.html
+++ b/index.html
@@ -47,10 +47,39 @@
           <li><a class="nav-link scrollto" href="#team">Conócenos</a></li>
           <li class="dropdown"><a href="#"><span>Temas de Interés</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="ProgramaciónDeAppsConSockets.html">» Programación de Aplicaciones con Sockets</a></li>
-              <li><a href="SeguridadEnLaComunicaciónDeDatos.html">» Seguridad en la Comunicación de Datos en una Red...</a></li>
-              <li><a href="SeguridadEnLaWeb.html">» Seguridad en la Web</a></li>
-              <li><a href="InternetDeLasCosas.html">» Internet de las cosas</a></li>
+
+              <li class="dropdown"><a href="content/Sockets/ProgramacionDeAppsConSockets.html"><span>» Sockets</span> <i class="bi bi-chevron-down"></i></a>
+                <ul>
+                  <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones</a></li>
+                  <li><a href="content/Sockets/TiposDeSockets.html">Tipos de Sockets</a></li>
+                  <li><a href="content/Sockets/VideoSockets.html">Video</a></li>
+                </ul>
+              </li>
+
+              <li class="dropdown"><a href="content/SeguridadComunicacion/SeguridadEnLaComunicaciónDeDatos.html"><span>» Seguridad en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
+                <ul>
+                  <li><a href="#">IPSec</a></li>
+                  <li><a href="#">VPN</a></li>
+                  <li><a href="#">Video</a></li>
+                </ul>
+              </li>
+
+              <li class="dropdown"><a href="content/SeguridadWeb/SeguridadEnLaWeb.html"><span>» Seguridad en la Web</span> <i class="bi bi-chevron-down"></i></a>
+                <ul>
+                  <li><a href="#">HTTPS</a></li>
+                  <li><a href="#">SSL / TLS</a></li>
+                  <li><a href="#">Video</a></li>
+                </ul>
+              </li>
+
+              <li class="dropdown"><a href="content/InternetCosas/InternetDeLasCosas.html"><span>» Internet de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
+                <ul>
+                  <li><a href="#">Descripción General</a></li>
+                  <li><a href="#">Cómo Funciona</a></li>
+                  <li><a href="#">Video</a></li>
+                </ul>
+              </li>
+
             </ul>
           </li>
         </ul>
@@ -74,18 +103,22 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="ProgramaciónDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a></h4>
+            <h4 class="title"><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a>
+            </h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            <a href="ProgramaciónDeAppsConSockets.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
+            <a href="content/Sockets/ProgramacionDeAppsConSockets.html" class="continue-btn">Continuar Leyendo <i
+                class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-lock-2-fill"></i></div>
-            <h4 class="title"><a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la Comunicación de Datos en una Red</a></h4>
+            <h4 class="title"><a href="SeguridadEnLaComunicacionDeDatos.html">Seguridad en la Comunicación de Datos en
+                una Red</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            <a href="SeguridadEnLaComunicaciónDeDatos.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
+            <a href="SeguridadEnLaComunicaciónDeDatos.html" class="continue-btn">Continuar Leyendo <i
+                class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
 
@@ -94,7 +127,8 @@
             <div class="icon"><i class="ri-git-repository-private-fill"></i></div>
             <h4 class="title"><a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            <a href="SeguridadEnLaWeb.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
+            <a href="SeguridadEnLaWeb.html" class="continue-btn">Continuar Leyendo <i
+                class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
 
@@ -103,7 +137,8 @@
             <div class="icon"><i class="ri-global-fill"></i></div>
             <h4 class="title"><a href="InternetDeLasCosas.html">Internet de las Cosas</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            <a href="InternetDeLasCosas.html" class="continue-btn">Continuar Leyendo <i class="ri-arrow-right-circle-fill"></i>  </a> 
+            <a href="InternetDeLasCosas.html" class="continue-btn">Continuar Leyendo <i
+                class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
 
@@ -119,7 +154,7 @@
 
         <div class="section-title">
           <h2>Acerca del proyecto</h2>
-          <p>Redes y Seguridad de Computadoras | Agosto - Diciembre 2021 | M.C. Martín Leonel Chí Pérez   </p>
+          <p>Redes y Seguridad de Computadoras | Agosto - Diciembre 2021 | M.C. Martín Leonel Chí Pérez </p>
         </div>
 
         <div class="row content">
@@ -137,7 +172,7 @@
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <a href="#hero" class="btn-learn-more">Ir al  Contenido</a>
+            <a href="#hero" class="btn-learn-more">Ir al Contenido</a>
           </div>
         </div>
 
@@ -187,7 +222,8 @@
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="}Jorge Arturo Aguilar Solís">
                 <div class="social">
                   <a href="https://github.com/artrune" target="_blank"><i class="bi bi-github"></i></a>
-                  <a href="https://www.linkedin.com/in/arturo-aguilar-62b54919b/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/arturo-aguilar-62b54919b/" target="_blank"><i
+                      class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -203,7 +239,8 @@
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="Víctor Manuel Lavalle Cantón">
                 <div class="social">
                   <a href="https://github.com/VictorLavalle" target="_blank"><i class="bi bi-github"></i></a>
-                  <a href="https://www.linkedin.com/in/victorlavalle/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/victorlavalle/" target="_blank"><i
+                      class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -218,7 +255,8 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="Eberth Francisco Mezeta Xool">
                 <div class="social">
-                  <a href="https://github.com/orgs/The-WebOnes/people/EberthMezeta" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://github.com/orgs/The-WebOnes/people/EberthMezeta" target="_blank"><i
+                      class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -234,8 +272,9 @@
               <div class="member-img">
                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="Pedro Daniel Euan Chan">
                 <div class="social">
-                  <a href="https://github.com/dongato99" target="_blank" ><i class="bi bi-github"></i></a>
-                  <a href="https://www.linkedin.com/in/pedro-daniel-euan-chan-509242213/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/dongato99" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/pedro-daniel-euan-chan-509242213/" target="_blank"><i
+                      class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -266,7 +305,8 @@
               Facultad de Matemáticas<br>
               Mérida, Yucatán <br>
               México <br><br>
-              <strong>Sitio Web:</strong> <a href="https://www.matematicas.uady.mx" target="_blank"> www.matematicas.uady.mx </a><br>
+              <strong>Sitio Web:</strong> <a href="https://www.matematicas.uady.mx" target="_blank">
+                www.matematicas.uady.mx </a><br>
             </p>
           </div>
 
@@ -282,8 +322,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Contenido</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="ProgramaciónDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la Comunicación de Datos en una Red</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="ProgramaciónDeAppsConSockets.html">Programación de
+                  Aplicaciones con Sockets</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la
+                  Comunicación de Datos en una Red</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="InternetDeLasCosas.html">Internet de las Cosas</a></li>
             </ul>
@@ -304,7 +346,8 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="https://github.com/The-WebOnes" target="_blank" class="github" id="github-footer"><i class="bx bxl-github" id="git-footer"></i></a>
+        <a href="https://github.com/The-WebOnes" target="_blank" class="github" id="github-footer"><i
+            class="bx bxl-github" id="git-footer"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -318,7 +361,6 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
