--- a/content/SeguridadComunicacion/SeguridadEnLaComunicacionDeDatos.html
+++ b/content/SeguridadComunicacion/SeguridadEnLaComunicacionDeDatos.html
@@ -11,7 +11,7 @@
     <meta content="Network, Webste, Security, IP, TCP, Sockets, HTTPS, HTTP, Internet of things, SSL " name="keywords">
 
     <!-- Favicon -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="../../assets/img/favicon.png" rel="icon">
 
     <!-- Google Fonts -->
     <link
@@ -28,8 +28,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!--CSS Files -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <!--     <link href="assets/css/blog.css" rel="stylesheet"> -->
+    <link href="../../assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -43,7 +42,7 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="../../index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="index.html#about">Acerca De</a></li>
                     <li><a class="nav-link scrollto" href="index.html#team">Conócenos</a></li>
                     <li class="dropdown"><a href="#"><span>Temas de Interés</span> <i
@@ -254,16 +253,16 @@
             class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/purecounter/purecounter.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../../assets/vendor/aos/aos.js"></script>
+    <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../../assets/vendor/php-email-form/validate.js"></script>
+    <script src="../../assets/vendor/purecounter/purecounter.js"></script>
+    <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-    <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="../../assets/js/main.js"></script>
 
 </body>
 
