Fixed responsive design

--- a/content/Sockets/TiposDeSockets.html
+++ b/content/Sockets/TiposDeSockets.html
@@ -53,10 +53,10 @@
                                     href="content/Sockets/ProgramacionDeAppsConSockets.html"><span>Sockets</span> <i
                                         class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de
-                                            Aplicaciones</a></li>
-                                    <li><a href="#">Tipos de Sockets</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">» Programación de
+                                        Aplicaciones</a></li>
+                                <li><a href="content/Sockets/TiposDeSockets.html">Tipos de Sockets</a></li>
+                                <li><a href="content/Sockets/VideoSockets.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -279,7 +279,6 @@
     <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../../assets/vendor/php-email-form/validate.js"></script>
     <script src="../../assets/vendor/purecounter/purecounter.js"></script>
     <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
