--- a/content/Sockets/ProgramacionDeAppsConSockets.html
+++ b/content/Sockets/ProgramacionDeAppsConSockets.html
@@ -54,9 +54,9 @@
                                         class="bi bi-chevron-down"></i></a>
                                 <ul>
                                     <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">» Programación de
-                                            Aplicaciones</a></li>
-                                    <li><a href="TiposDeSockets.html">Tipos de Sockets</a></li>
-                                    <li><a href="VideoSockets.html">Video</a></li>
+                                        Aplicaciones</a></li>
+                                <li><a href="content/Sockets/TiposDeSockets.html">Tipos de Sockets</a></li>
+                                <li><a href="content/Sockets/VideoSockets.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -170,7 +170,7 @@
                                         <ul class="list-unstyled mb-0">
                                             <li><a href="#">» 1. Programación de Aplicaciones con Sockets</a></li>
                                             <li><a href="TiposDeSockets.html">2. Tipos de Sockets</a></li>
-                                            <li><a href="VideoSockets.html">3. Freebies</a></li>
+                                            <li><a href="VideoSockets.html">3. Video</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -277,7 +277,6 @@
     <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../../assets/vendor/php-email-form/validate.js"></script>
     <script src="../../assets/vendor/purecounter/purecounter.js"></script>
     <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
