--- a/content/Sockets/VideoSockets.html
+++ b/content/Sockets/VideoSockets.html
@@ -52,10 +52,10 @@
                             <li class="dropdown"><a href="content/Sockets/ProgramacionDeAppsConSockets.html"><span>»
                                         Sockets</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de
-                                            Aplicaciones</a></li>
-                                    <li><a href="#">Tipos de Sockets</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">» Programación de
+                                        Aplicaciones</a></li>
+                                <li><a href="content/Sockets/TiposDeSockets.html">Tipos de Sockets</a></li>
+                                <li><a href="content/Sockets/VideoSockets.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -272,7 +272,6 @@
     <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../../assets/vendor/php-email-form/validate.js"></script>
     <script src="../../assets/vendor/purecounter/purecounter.js"></script>
     <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
